Fixed font size on small devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,14 @@ $red: #ea0001;
 body {
   position:relative;
   font-family: "Andale Mono", AndaleMono, monospace;
+  font-size: 3em;
+}
+
+@media (min-width: 768px) and (orientation: landscape) {
+  body {
+    font-size: 1.5em;
   }
+}
 
 .top-bar {
   height: 85px;
